<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="name">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolateChips">Chocolate Chips</string>
    <string name="order">ORDER</string>
    <string name="needWhippedCream">Add whipped cream?</string>
    <string name="needChocolatChips">Add chocolate chips?</string>
    <string name="qty">Quantity:</string>
    <string name="total">Total : $</string>
    <string name="thank">Thank You!!</string>
    <string name="customerName">Name: <xliff:g id="name" example ="Amy">%s</xliff:g></string>
</resources>
